Правки по замечаниям после ревью + добавил инициализацию setUp() для каждого теста, что бы корректно работал mvn clean test - теперь всегда "свежий" обьект инициализируется перед каждым тестом