@@ -1,42 +1,45 @@
 package com.example;
 
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
-import org.mockito.Mockito;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
 public class LionTest {
 
     @Mock
-    Feline mockFeline;
+    private Feline mockFeline;
 
-    @Test
-    public void testGetKittens() throws Exception {
-        Lion lion = new Lion("Самец", mockFeline);
-        int expectedValue = 1;
-        Mockito.when(mockFeline.getKittens()).thenReturn(expectedValue);
-        assertEquals(expectedValue, lion.getKittens());
+    private Lion lion;
+
+    @BeforeEach
+    void setUp() throws Exception {
+        lion = new Lion("Самец", mockFeline);
     }
 
     @Test
-    public void testDoesHaveMane() throws Exception {
-        Lion lion = new Lion("Самец", mockFeline);
+    void testGetKittens() {
+        when(mockFeline.getKittens()).thenReturn(1);
+        assertEquals(1, lion.getKittens());
+    }
+
+    @Test
+    void testDoesHaveMane() {
         assertTrue(lion.doesHaveMane());
     }
 
     @Test
-    public void testGetFood() throws Exception {
-        Lion lion = new Lion("Самец", mockFeline);
-        List<String> expectedtValue = Arrays.asList("Животные", "Птицы", "Рыба");
-        Mockito.when(mockFeline.getFood("Хищник")).thenReturn(expectedtValue);
-        assertEquals(expectedtValue, lion.getFood());
+    void testGetFood() throws Exception {
+        List<String> expected = List.of("Животные", "Птицы", "Рыба");
+        when(mockFeline.getFood("Хищник")).thenReturn(expected);
+        assertEquals(expected, lion.getFood());
     }
 }
